[project]
name = "2048ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "numba>=0.66.0",
    "pandas>=3.0",
    "pygame>=2.6.1",
    "tensorboard>=2.21.0",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "coverage>=7.15.1",
    "pytest>=9.1.1",
    "tabulate>=0.10.0",
    "tqdm>=4.68.4",
]
